add palm support

--- a/src/LLMP.Desktop/Pages/ChatPage.razor
+++ b/src/LLMP.Desktop/Pages/ChatPage.razor
@@ -261,7 +261,7 @@
     }
     async Task Reset()
     {
-        ChatSvc.SetupOpenAI(SelectedModel, SystemMessage);
+        ChatSvc.SetupChat(SelectedModel, SystemMessage);
         Items.Clear();
         ImageName = string.Empty;
         ImageData = null;
