--- a/src/LLMP.Desktop/Pages/ChatPage.razor
+++ b/src/LLMP.Desktop/Pages/ChatPage.razor
@@ -66,7 +66,7 @@
                                             <ChildContent>
                                                 <MudPaper Class="pa-6" Elevation="3">
                                                     <MudText Typo="Typo.body1">
-                                                        @((MarkupString)item.Answer)
+                                                        @((MarkupString)HtmlHelper.ConvertToHtmlUsingConcatenation(item.Answer))
                                                     </MudText>
                                                     @if (item is { Sources.Count: > 0 })
                                                     {
