add search and doc chat

--- a/src/LLMP.Desktop/Shared/NavMenu.razor
+++ b/src/LLMP.Desktop/Shared/NavMenu.razor
@@ -2,4 +2,6 @@
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
     <MudNavLink Href="chat-page" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.ChatBubble">Chat Completion</MudNavLink>
     <MudNavLink Href="completion-page" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Note">Completion</MudNavLink>
+    <MudNavLink Href="chat-doc-page" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.FileOpen">Chat with Document</MudNavLink>
+    <MudNavLink Href="search-page" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Search">LLM Search</MudNavLink>
 </MudNavMenu>
