--- a/src/LLMP.Desktop/Shared/NavMenu.razor
+++ b/src/LLMP.Desktop/Shared/NavMenu.razor
@@ -4,4 +4,5 @@
     <MudNavLink Href="completion-page" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Note">Completion</MudNavLink>
     <MudNavLink Href="chat-doc-page" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.FileOpen">Chat with Document</MudNavLink>
     <MudNavLink Href="search-page" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Search">LLM Search</MudNavLink>
+    <MudNavLink Href="image-generator-page" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Image">Image Generator</MudNavLink>
 </MudNavMenu>
