--- a/src/LLMP.Desktop/Pages/ImageGeneratorPage.razor
+++ b/src/LLMP.Desktop/Pages/ImageGeneratorPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/image-generator-page"
+@using Betalgo.Ranul.OpenAI.ObjectModels
 @inject AppState AppState
 @inject ISnackbar Snackbar
 @inject ImageGeneratorService ChatSvc
