--- a/src/LLMP.Desktop/Shared/Usercontrols/MudInfoDialog.razor
+++ b/src/LLMP.Desktop/Shared/Usercontrols/MudInfoDialog.razor
@@ -9,7 +9,7 @@
 
 
 @code {
-    [CascadingParameter] MudDialogInstance MudDialog { get; set; }
+    [CascadingParameter] IMudDialogInstance MudDialog { get; set; }
 
     async Task Submit() {
         await OnClick.InvokeAsync(true);
