--- a/src/LLMP.Desktop/Shared/Usercontrols/PictureDialog.razor
+++ b/src/LLMP.Desktop/Shared/Usercontrols/PictureDialog.razor
@@ -21,7 +21,7 @@
     </DialogActions>
 </MudDialog>
 @code {
-    [CascadingParameter] MudDialogInstance MudDialog { get; set; }
+    [CascadingParameter] IMudDialogInstance MudDialog { get; set; }
 
     [Parameter]
     public string ImageUrl { get; set; } 
